use FileAccessSystem for external code generation